Rely on Exiv2 to definitely tell us that a file is not supported for writing, so that newly added support is not ignored, rather than using a static list of file suffixes.

We keep a static list to apply the "do not write to raw" setting, as the image mimetype does not reliably identify a RAW image.
The "not supported" list is not used to fail, instead we check the possible write mode in saveOperations.

BUG: 305823